--- a/src/components/Navigation/Drawer/Drawer.module.sass
+++ b/src/components/Navigation/Drawer/Drawer.module.sass
@@ -3,7 +3,7 @@
     left: 0
     top: 0
     bottom: 0
-    width: 80px
+    width: 80%
     max-width: 300px
     padding: 20px 10px
     box-sizing: border-box
